--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
   </head>
   <body>
+    <div id="screen">
+      <div id="posts"></div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
