Prep for displaying users

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <div id="screen">
-      <div id="posts"></div>
+      <h2 id="posts">Posts</h2>
+      <h2 id="users">Users</h2>
     </div>
     <script src="script.js"></script>
   </body>
