--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   </head>
   <body>
     <div id="screen">
-      <h2 id="posts">Posts</h2>
-      <h2 id="users">Users</h2>
+      <h2>Posts</h2>
+      <section id="posts"></section>
+
+      <h2>Users</h2>
+      <section id="users"></section>
     </div>
     <script src="script.js"></script>
   </body>
