--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   </head>
   <body>
     <div id="screen">
+      <form action="">
+        <input type="submit" />
+        <input type="text" />
+      </form>
       <h2>Posts</h2>
       <section id="posts"></section>
 
